# APP-Comunicarlos-2026

./: .dockerignore  .env.example  .gitignore  DIAGNOSTICO_ESTADO_PROYECTO.md  Dockerfile  GUIA_DEFENSA_ORAL.md  INICIAR.bat  MIGRACION_MONGODB.md  README.md  VALIDACION_DOCKER.md  conftest.py  docker-compose.yml  implementation_plan-fase1  iniciar-y-probar.ps1  main.py  pyproject.toml
app/: auth.py  config.py  deps.py
app/compartido/: dominio.py
app/infraestructura/: __init__.py  database.py  modelos_orm.py  repo_requerimientos.py  repo_usuarios.py
app/notificaciones/: dominio.py
app/requerimientos/: dominio.py  (+6 more)
bruno/: bruno.json
docs_proceso/: 00_INDICE_GENERAL.md  01_OBJETIVO_Y_CONTEXTO.md  02_ESTRATEGIA_DE_TRABAJO_CON_IA.md  03_FASE_DOMINIO.md  04_FASE_TESTS_DOMINIO.md  05_FASE_REPOSITORIOS_ABSTRACTOS.md  06_FASE_SERVICIOS.md  07_FASE_SCHEMAS_Y_DTOS.md  08_FASE_ROUTERS.md  09_FASE_AUTH_JWT.md  10_FASE_INFRAESTRUCTURA_Y_PERSISTENCIA.md  11_FASE_DOCKER_Y_DESPLIEGUE.md  12_FASE_COLECCION_BRUNO.md  13_CONTROL_Y_TRAZABILIDAD.md  14_DECISIONES_TECNICAS_CLAVE.md  15_LECCIONES_APRENDIDAS.md  16_ESTADO_FINAL_Y_PENDIENTES.md  17_GUIA_PARA_DEFENSA_ORAL.md
requests/: README.md  mesa_de_ayuda.http
tests/: test_auth.py  test_compartido_dominio.py  test_infraestructura.py  test_notificaciones_dominio.py  test_requerimientos_dominio.py  test_requerimientos_excepciones.py  test_requerimientos_router.py  test_requerimientos_schemas.py  test_requerimientos_servicios.py  test_usuarios_dominio.py  test_usuarios_router.py  test_usuarios_schemas.py  test_usuarios_servicios.py
(+64 files in other folders)
